gssdp-client: Plug memory leak

In socket_source_callback all messages are leaked,
plug that by unref each message and free the array.

Signed-off-by: Richard Röjfors <richard.rojfors@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=737870